--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         </div>
     </div>
  
-    <script src="script.js"></script>
-    <script src="cores.js"></script>
+    <script src="js/script.js"></script>
+    <!-- <script src="js/cores.js"></script> -->
+    <!-- <script src="js/funcCor.js"></script> -->
 </body>
 </html>
