--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relógio</title>
 
-    <link rel="stylesheet" href="escuro.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body id="body">
